hw05/Solutions/hw05/yNFA.output
Grammar

    0 $accept: line $end

    1 line: A0 '\n'
    2     | error '\n'
    3     | line A0 '\n'

    4 A0: aletter A0
    5   | bletter A0
    6   | aletter A1
    7   | bletter A1

    8 A1: bletter A2

    9 A2: aletter A3
   10   | bletter A3

   11 A3: /* empty */

   12 aletter: 'a'

   13 bletter: 'b'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1 2 3
'a' (97) 12
'b' (98) 13
error (256) 2


Nonterminals, with rules where they appear

$accept (6)
    on left: 0
line (7)
    on left: 1 2 3, on right: 0 3
A0 (8)
    on left: 4 5 6 7, on right: 1 3 4 5
A1 (9)
    on left: 8, on right: 6 7
A2 (10)
    on left: 9 10, on right: 8
A3 (11)
    on left: 11, on right: 9 10
aletter (12)
    on left: 12, on right: 4 6 9
bletter (13)
    on left: 13, on right: 5 7 8 10


state 0

    0 $accept: . line $end

    error  shift, and go to state 1
    'a'    shift, and go to state 2
    'b'    shift, and go to state 3

    line     go to state 4
    A0       go to state 5
    aletter  go to state 6
    bletter  go to state 7


state 1

    2 line: error . '\n'

    '\n'  shift, and go to state 8


state 2

   12 aletter: 'a' .

    $default  reduce using rule 12 (aletter)


state 3

   13 bletter: 'b' .

    $default  reduce using rule 13 (bletter)


state 4

    0 $accept: line . $end
    3 line: line . A0 '\n'

    $end  shift, and go to state 9
    'a'   shift, and go to state 2
    'b'   shift, and go to state 3

    A0       go to state 10
    aletter  go to state 6
    bletter  go to state 7


state 5

    1 line: A0 . '\n'

    '\n'  shift, and go to state 11


state 6

    4 A0: aletter . A0
    6   | aletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A0       go to state 12
    A1       go to state 13
    aletter  go to state 6
    bletter  go to state 14


state 7

    5 A0: bletter . A0
    7   | bletter . A1

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A0       go to state 15
    A1       go to state 16
    aletter  go to state 6
    bletter  go to state 14


state 8

    2 line: error '\n' .

    $default  reduce using rule 2 (line)


state 9

    0 $accept: line $end .

    $default  accept


state 10

    3 line: line A0 . '\n'

    '\n'  shift, and go to state 17


state 11

    1 line: A0 '\n' .

    $default  reduce using rule 1 (line)


state 12

    4 A0: aletter A0 .

    $default  reduce using rule 4 (A0)


state 13

    6 A0: aletter A1 .

    $default  reduce using rule 6 (A0)


state 14

    5 A0: bletter . A0
    7   | bletter . A1
    8 A1: bletter . A2

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    A0       go to state 15
    A1       go to state 16
    A2       go to state 18
    aletter  go to state 19
    bletter  go to state 20


state 15

    5 A0: bletter A0 .

    $default  reduce using rule 5 (A0)


state 16

    7 A0: bletter A1 .

    $default  reduce using rule 7 (A0)


state 17

    3 line: line A0 '\n' .

    $default  reduce using rule 3 (line)


state 18

    8 A1: bletter A2 .

    $default  reduce using rule 8 (A1)


state 19

    4 A0: aletter . A0
    6   | aletter . A1
    9 A2: aletter . A3

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 11 (A3)

    A0       go to state 12
    A1       go to state 13
    A3       go to state 21
    aletter  go to state 6
    bletter  go to state 14


state 20

    5 A0: bletter . A0
    7   | bletter . A1
    8 A1: bletter . A2
   10 A2: bletter . A3

    'a'  shift, and go to state 2
    'b'  shift, and go to state 3

    $default  reduce using rule 11 (A3)

    A0       go to state 15
    A1       go to state 16
    A2       go to state 18
    A3       go to state 22
    aletter  go to state 19
    bletter  go to state 20


state 21

    9 A2: aletter A3 .

    $default  reduce using rule 9 (A2)


state 22

   10 A2: bletter A3 .

    $default  reduce using rule 10 (A2)
